testsuite/tests/rename/should_compile/T5592.hs
{-# LANGUAGE RecordWildCards #-}
module Main where

import qualified T5592a as MR (MyRecord(MyRecord, field))

main
  = do { let field = "Hello, world!"
             rec = MR.MyRecord {..}
       ; print rec }
